--- a/index.html
+++ b/index.html
@@ -8,14 +8,34 @@
 </head>
 <body>
     <header>
-        <h1>FR8</h1>
+        <img src="public\fr8logowhite.svg" alt="FR8 Logo" width="100">
     </header>
-    <section id="content">
-        <h2>Welcome to FR8</h2>
-        <p>Where young mavericks build the future</p>
-    </section>
+    <main id="content">
+        <h3>Where young mavericks build the future.</h3>
+        <p>
+            FR8 is a residency incubator for the next generation of founders, launching in Espoo, Finland.
+        </p>
+        <p>
+            It's a place for serious builders — people who are ready to drop the distractions and go all-in on their ideas. You'll live and work full-time in a 650m² mansion alongside other ambitious bold thinkers. 
+        </p>
+        <p>
+            FR8 isn't for everyone. We have high standards, and if you're not hitting them, you're out.
+            <br>
+            It's intense, fast-paced, and designed for people who want to push boundaries and make something that reshapes the future.
+        </p>
+        <p>
+            We are a non-profit. We take 0% equity, no strings attached. And it's 100% free.
+        </p>
+        <p>
+            Whether you're just starting to brainstorm, working on a project, or already in the early stages of building your startup, you're eligible to apply. Solo applicants are welcome, but having a team is a plus.
+        </p>
+        <p id="cohort-dates">
+            Cohort 0.5: Jan 8 – Apr 8, 2025
+        </p>
+        <a href="https://tally.so/r/3jQv89" class="apply-button">Apply Now</a>
+    </main>
     <footer>
-        <p>&copy; 2024 FR8</p>
+        <p>&copy; 2025 FR8</p>
     </footer>
     <script src="main.js"></script>
 </body>
