--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             Whether you're just starting to brainstorm, working on a project, or already in the early stages of building your startup, you're eligible to apply. Solo applicants are welcome, but having a team is a plus.
         </p>
         <p id="cohort-dates">
-            Cohort 0.5: Jan 8 – Apr 8, 2025
+            Cohort 0.5:
+            <br> Jan 8 – Apr 8, 2025
         </p>
         <a href="https://tally.so/r/3jQv89" class="apply-button">Apply Now</a>
     </main>
