--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="https://tally.so/r/3jQv89" class="apply-button">Apply Now</a>
     </main>
     <footer>
-        <p>&copy; 2025 FR8</p>
+        <p>&copy; 2025 FR8, e@fr8.so</p>
     </footer>
     <script src="main.js"></script>
 </body>
