--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main id="content">
         <h3>Where young mavericks build the future.</h3>
         <p>
-            FR8 is a residency incubator for the next generation of founders, launching in Espoo, Finland.
+            FR8 is a residency incubator for the next generation of Founders, launching in Espoo, Finland.
         </p>
         <p>
             It's a place for serious builders — people who are ready to drop the distractions and go all-in on their ideas. You'll live and work full-time in a 650m² mansion alongside other ambitious bold thinkers. 
